--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "electron": "^28.0.0"
   },
   "devDependencies": {
+    "@electron/notarize": "^3.1.1",
     "electron-builder": "^24.6.4"
   },
   "build": {
     "appId": "com.easymusic.app",
     "productName": "EasyMusic",
+    "afterSign": "build/notarize.js",
     "directories": {
       "output": "dist"
     },
@@ -41,7 +43,21 @@
     ],
     "mac": {
       "category": "public.app-category.music",
-      "icon": "assets/icon.png"
+      "icon": "assets/icon.png",
+      "type": "distribution",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.plist",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ]
     },
     "win": {
       "icon": "assets/icon.png"
@@ -49,6 +65,20 @@
     "linux": {
       "category": "Audio",
       "icon": "assets/icon.png"
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
     }
   },
   "engines": {
