fixes to the github actions and deployment

--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -6,10 +6,16 @@ on:
       - 'v*.*.*'  # Only run on version tag pushes
   workflow_dispatch:  # Allow manual trigger for testing
 
+permissions:
+  contents: write
+  discussions: write
+
 jobs:
   create-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
       version: ${{ steps.extract_version.outputs.version }}
@@ -199,6 +205,8 @@ jobs:
     name: Upload to Release
     needs: [build-mac, build-windows, build-linux]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Download all artifacts
