--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "clean-downloads": "rm -rf downloads/*",
     "clean-spotdl": "rm -rf spotdl_env"
   },
-  "dependencies": {
-    "electron": "^28.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@electron/notarize": "^3.1.1",
+    "electron": "^28.0.0",
     "electron-builder": "^24.6.4"
   },
   "build": {
