--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
   "build": {
     "appId": "com.easymusic.app",
     "productName": "EasyMusic",
-    "afterSign": "build/notarize.js",
     "directories": {
       "output": "dist"
     },
     "files": [
       "**/*",
       "!dist/**/*",
-      "!build/**/*",
       "!downloads/**/*",
       "!spotdl_env/**/*",
       "!node_modules/**/*",
@@ -42,7 +40,7 @@
     ],
     "mac": {
       "category": "public.app-category.music",
-      "icon": "assets/icon.png",
+      "icon": "assets/icon.icns",
       "type": "distribution",
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
@@ -58,6 +56,7 @@
         }
       ]
     },
+    "afterSign": "build/notarize.js",
     "win": {
       "icon": "assets/icon.png"
     },
