--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "__pycache__"
       ],
       "strictVerify": false,
+      "notarize": false,
       "target": [
         {
           "target": "dmg",
