--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
-    "build-spotdl": "python3 scripts/build-spotdl.py",
+    "build-spotdl": "python3 scripts/build-spotdl-pyinstaller.py",
     "download-ffmpeg": "bash scripts/download-ffmpeg.sh",
     "build": "npm run build-spotdl && npm run download-ffmpeg && electron-builder",
     "build:verbose": "npm run build-spotdl && npm run download-ffmpeg && DEBUG=electron-builder electron-builder",
     "build-electron": "electron-builder",
     "clean": "rm -rf dist build downloads spotdl_env node_modules binaries",
     "clean-downloads": "rm -rf downloads/*",
-    "clean-spotdl": "rm -rf spotdl_env"
+    "clean-spotdl": "rm -rf spotdl_env binaries/spotdl"
   },
   "dependencies": {},
   "devDependencies": {
@@ -37,15 +37,11 @@
       "!.gitignore",
       "!.git/**/*",
       "!.DS_Store",
-      "spotdl_env/**/*",
+      "!spotdl_env/**/*",
+      "!build/**/*",
       "binaries/**/*"
     ],
     "extraResources": [
-      {
-        "from": "spotdl_env",
-        "to": "spotdl_env",
-        "filter": ["**/*"]
-      },
       {
         "from": "binaries",
         "to": "binaries",
@@ -60,18 +56,6 @@
       "gatekeeperAssess": false,
       "entitlements": "build/entitlements.mac.plist",
       "entitlementsInherit": "build/entitlements.mac.plist",
-      "signIgnore": [
-        "Contents/Resources/spotdl_env",
-        "spotdl_env",
-        "\\.py$",
-        "\\.pyc$",
-        "\\.pyo$",
-        "\\.mo$",
-        "\\.so$",
-        "/__pycache__/",
-        "/site-packages/"
-      ],
-      "strictVerify": false,
       "target": [
         {
           "target": "dmg",
