Move entitlements file to root directory to fix GitHub Actions signing
The entitlements.mac.plist file was moved from build/ to the project root
and updated the package.json paths accordingly. This resolves the
'cannot read entitlement data' error in GitHub Actions macOS builds.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "!.DS_Store",
       "!spotdl_env/**/*",
       "!build/**/*",
+      "build/entitlements.mac.plist",
       "binaries/**/*"
     ],
     "extraResources": [
@@ -54,8 +55,8 @@
       "type": "distribution",
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
-      "entitlements": "./build/entitlements.mac.plist",
-      "entitlementsInherit": "./build/entitlements.mac.plist",
+      "entitlements": "entitlements.mac.plist",
+      "entitlementsInherit": "entitlements.mac.plist",
       "target": [
         {
           "target": "dmg",
