--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {},
   "devDependencies": {
     "electron": "^28.0.0",
-    "electron-builder": "^24.6.4"
+    "electron-builder": "^24.6.4",
+    "@electron/notarize": "^2.1.0"
   },
   "build": {
     "appId": "com.easymusic.app",
@@ -59,6 +60,9 @@
       "gatekeeperAssess": false,
       "entitlements": "entitlements.mac.plist",
       "entitlementsInherit": "entitlements.mac.plist",
+      "notarize": {
+        "teamId": "${APPLE_TEAM_ID}"
+      },
       "target": [
         {
           "target": "dmg",
@@ -68,6 +72,7 @@
         }
       ]
     },
+    "afterSign": "scripts/notarize.js",
     "linux": {
       "category": "Audio",
       "icon": "assets/icon.png"
