--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
       "gatekeeperAssess": false,
       "entitlements": "entitlements.mac.plist",
       "entitlementsInherit": "entitlements.mac.plist",
+      "notarize": false,
       "target": [
         {
           "target": "dmg",
